--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@vercel/analytics": "^1.0.0",
     "cal-sans": "^1.0.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -18,6 +19,7 @@
     "next": "^13.3.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7"
   }
 }
